--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Resume</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <h1>Jackie Colinares</h1>
